--- a/src/spring-hateoas/pom.xml
+++ b/src/spring-hateoas/pom.xml
@@ -56,6 +56,19 @@
         </dependency>
 
 
+        <!-- SWAGGER -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+
         <!-- TESTING -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
